# race-solana

./: Cargo.toml  flake.nix
contract/: Cargo.toml
src/: constants.rs  error.rs  instruction.rs  lib.rs  processor.rs  ser.rs  state.rs  types.rs
src/processor/: add_recipient_slot.rs  add_recipient_slots.rs  assign_recipient.rs  attach_bonus.rs  close_game.rs  create_game.rs  create_profile.rs  create_recipient.rs  create_registry.rs  deposit.rs  join.rs  misc.rs  publish_game.rs  recipient_claim.rs  register_game.rs  register_server.rs  reject_deposits.rs  serve.rs  settle.rs  unregister_game.rs  vote.rs
src/state/: game.rs  game2.rs  players.rs  profile.rs  recipient.rs  registry.rs  server.rs
types/: Cargo.toml
