[package]
name = "race-solana"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-program = "=1.14.20"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
borsh = "0.9.3"
arrayref = "0.3.6"
thiserror = "1.0.35"
spl-associated-token-account = "1.1.3"
mpl-token-metadata = "1.13.0"

[dev-dependencies]
anyhow = "1.0.64"
