[package]
name = "race-solana"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-program = "=1.17.31"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
borsh = "0.10.3"
thiserror = "1.0.35"
spl-associated-token-account = { version = "2.3.1", features = ["no-entrypoint"] }
mpl-token-metadata = "4.1.2"

[dev-dependencies]
anyhow = "1.0.64"
