[package]
name = "race-solana"
version = "0.2.6"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-program = "1.18.26"
spl-token = { version = "4.0.3", features = ["no-entrypoint"] }
borsh = "1.5.1"
thiserror = "2.0.3"
spl-associated-token-account = { version = "3.0.4", features = ["no-entrypoint"] }
mpl-token-metadata = "3.2.3"

[dev-dependencies]
anyhow = "1.0.93"
