[package]
name = "race-solana"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-program = "1.14.18"
spl-token = { version = "3.5.0", features = ["no-entrypoint"]}
spl-associated-token-account = "1.1.2"
race-solana-types = { path = "../types", features = ["program"] }
borsh = "0.9.3"
arrayref = "0.3.6"
thiserror = "1.0.35"
mpl-token-metadata = { version = "1.9.1", features = ["no-entrypoint"] }

[dev-dependencies]
anyhow = "1.0.64"
